--- a/index.html
+++ b/index.html
@@ -11,27 +11,42 @@
 </head>
 
 <body>
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Dima Dibb</a>
-    <button class="navbar-toggler float-right" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse float-right" id="navbarNav">
-      <ul class="navbar-nav bg-light">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <a class="navbar-brand " href="#">Dima Dibb</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarNav">
+        <ul class="nav navbar navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html"> About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html"> Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html"> Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container project-pic">
+      <div class="row">
+        <div class="col-md-3">
+          <img src="assets/images/0.jpeg" class="img-thumbnail" alt="profile picture">
+        </div>
+        <div class="col-lg-7 text-justify">
+          <p>My Name is Dima, I am a web devoleper with a background in jornalism. When i moved to USA, I studied a
+            medical assistant, I worked in medical filed for 3 years,I am a momm for the cutest kid ever.
+          </p>
+        </div>
+      </div>
     </div>
-  </nav>
+  <div class="fixed-bottom">
+    copyright@
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
