--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-      <a class="navbar-brand " href="#">Dima Dibb</a>
+      <a class="navbar-brand text-center" href="#">Dima Dibb</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -32,18 +32,22 @@
         </ul>
       </div>
     </nav>
-    <div class="container project-pic">
-      <div class="row">
-        <div class="col-md-3">
-          <img src="assets/images/0.jpeg" class="img-thumbnail" alt="profile picture">
-        </div>
-        <div class="col-lg-7 text-justify">
-          <p>My Name is Dima, I am a web devoleper with a background in jornalism. When i moved to USA, I studied a
-            medical assistant, I worked in medical filed for 3 years,I am a momm for the cutest kid ever.
-          </p>
-        </div>
+  </div>
+  <div class="container project-pic">
+    <div class="page-header">
+      <h3>About me</h3>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <img src="assets/images/0.jpeg" class="img-thumbnail" alt="profile picture">
+      </div>
+      <div class="col-lg-7 text-justify">
+        <p class="paragraph-text">My Name is Dima, I am a web devoleper with a background in jornalism. When i moved to USA, I studied a
+          medical assistant, I worked in medical filed for 3 years,I am a momm for the cutest kid ever.
+        </p>
       </div>
     </div>
+  </div>
   <div class="fixed-bottom">
     copyright@
   </div>
