--- a/portfolio.html
+++ b/portfolio.html
@@ -42,21 +42,33 @@
             <div class="col-lg-4 position-relative">
                 <div class="img-thumbnail h-100">
                     <img class="project-pic" src="assets/images/images.jpeg" class="float-xl-right" alt="web develope">
+
                 </div>
-                <div class="project-name position-absolute text-center">Hangman</div>
+                <div class="project-name position-absolute text-center">
+                    <a href="https://dima-04.github.io/Word-Guess-Game/">Visit Word-Guess-Game!</a>
+                    <a href="https://github.com/dima-04/Word-Guess-Game">Word-Guess-Game repository</a>
+                </div>
+
             </div>
             <div class="col-lg-4 position-relative">
                 <div class="img-thumbnail h-100">
                     <img class="project-pic" src="assets/images/download.jpeg" class="float-xl-right"
                         alt="web develope">
                 </div>
-                <div class="project-name position-absolute text-center">RPG Game</div>
+                <div class="project-name position-absolute text-center">
+                        <a href=" https://dima-04.github.io/GifTastic/">Visit GifTastic!</a>
+                        <a href=" https://github.com/dima-04/GifTastic">GifTastic repository</a>
+                </div>
+                
             </div>
             <div class="col-lg-4 position-relative">
                 <div class="img-thumbnail h-100">
                     <img class="project-pic" src="assets/images/web9.jpeg" class="float-xl-right" alt="web develope">
                 </div>
-                <div class="project-name position-absolute text-center">Trivia Game</div>
+                <div class="project-name position-absolute text-center">
+                        <a href="  https://dima-04.github.io/Train-Scheduler/">Visit Train Scheduler!</a>
+                        <a href=" https://github.com/dima-04/Train-Scheduler">Train Scheduler repository</a>
+                </div>
             </div>
             <div class="col-lg-4 position-relative">
                 <div class="img-thumbnail h-100">
