--- a/contact.html
+++ b/contact.html
@@ -43,15 +43,11 @@
         <form>
             <div class="container">
 
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Name</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="John Smith">
+                <div class="form-group mt-3">
+                    <label for="exampleInputEmail1">My number: 201-354-6700</label>
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="example@gmail.com">
+                <div class="form-group mt-3">
+                    <label for="exampleInputEmail1">Email address dima.dibb1@gmail.com</label>
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlTextarea1">Message</label>
