--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                     <label for="exampleInputEmail1">My number: 201-354-6700</label>
                 </div>
                 <div class="form-group mt-3">
-                    <label for="exampleInputEmail1">Email address dima.dibb1@gmail.com</label>
+                    <label for="exampleInputEmail1">Email address: dima.dibb1@gmail.com</label>
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlTextarea1">Message</label>
