--- a/index.html
+++ b/index.html
@@ -37,14 +37,24 @@
     <div class="page-header">
       <h3>About me</h3>
     </div>
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-md-3">
         <img src="assets/images/0.jpeg" class="img-thumbnail" alt="profile picture">
       </div>
       <div class="col-lg-7 text-justify">
-        <p class="paragraph-text">My Name is Dima, I am a web devoleper with a background in jornalism. When i moved to USA, I studied a
-          medical assistant, I worked in medical filed for 3 years,I am a momm for the cutest kid ever.
+        <p class="paragraph-text mt-3">My Name is Dima, front-End Web Developer leveraging a background in journalism
+          and medical field, to build a more intuitive user experience on the web. Recently earned a certificate in Full
+          Stack Development from the University of Washington, with newly developed skills in JavaScript, CSS, React.js,
+          and responsive web design. I am known as an innovative problem-solver passionate about developing apps, with a
+          focus on mobile-first design and development. With each project, my aim is to best engage my audience for an
+          impactful user experience. I applied aspects of UX and agile development in a recent project where I worked in
+          a team of four to develop a single-page MERN app that helps local business owners track their sales, inventory
+          and attendance at specialty events. Excited to leverage skills in the future as part of a fast-paced,
+          quality-driven team in order to build better experiences on the web.
         </p>
+        <p ><a href="assets/Dima_Dibb_Resume.pdf">Download My Resume </a></p>
+        <p ><a href="https://www.linkedin.com/in/dima-dibb-896782b9/">Visit My LinkedIn Profile</a></p>
+        <p ><a href="https://github.com/dima-04">Visit My GitHub Profile</a></p>
       </div>
     </div>
   </div>
