--- a/portfolio.html
+++ b/portfolio.html
@@ -41,11 +41,12 @@
         <div class="row">
             <div class="col-lg-4 position-relative">
                 <div class="img-thumbnail h-100">
-                    <img class="project-pic" src="assets/images/images.jpeg" class="float-xl-right" alt="web develope">
+                    <img class="project-pic" src="assets/images/wGG.png" class="float-xl-right" alt="WGG">
 
                 </div>
                 <div class="project-name position-absolute text-center">
                     <a href="https://dima-04.github.io/Word-Guess-Game/">Visit Word-Guess-Game!</a>
+                    <br>
                     <a href="https://github.com/dima-04/Word-Guess-Game">Word-Guess-Game repository</a>
                 </div>
 
