--- a/portfolio.html
+++ b/portfolio.html
@@ -45,41 +45,48 @@
 
                 </div>
                 <div class="project-name position-absolute text-center">
-                    <a href="https://dima-04.github.io/Word-Guess-Game/">Visit Word-Guess-Game!</a>
+                    <a class="text" href="https://dima-04.github.io/Word-Guess-Game/">Visit Word-Guess-Game!</a>
                     <br>
-                    <a href="https://github.com/dima-04/Word-Guess-Game">Word-Guess-Game repository</a>
+                    <a class="text" href="https://github.com/dima-04/Word-Guess-Game">Word-Guess-Game repository</a>
                 </div>
 
             </div>
             <div class="col-lg-4 position-relative">
                 <div class="img-thumbnail h-100">
-                    <img class="project-pic" src="assets/images/download.jpeg" class="float-xl-right"
+                    <img class="project-pic" src="assets/images/Animal.png" class="float-xl-right" alt="web develope">
+                </div>
+                <div class="project-name position-absolute text-center">
+                    <a class="text" href=" https://dima-04.github.io/GifTastic/">Visit GifTastic!</a>
+                    <br>
+                    <a class="text" href=" https://github.com/dima-04/GifTastic">GifTastic repository</a>
+                </div>
+
+            </div>
+            <div class="col-lg-4 position-relative">
+                <div class="img-thumbnail h-100">
+                    <img class="project-pic" src="assets/images/Anytime-T.png" class="float-xl-right"
                         alt="web develope">
                 </div>
                 <div class="project-name position-absolute text-center">
-                        <a href=" https://dima-04.github.io/GifTastic/">Visit GifTastic!</a>
-                        <a href=" https://github.com/dima-04/GifTastic">GifTastic repository</a>
-                </div>
-                
-            </div>
-            <div class="col-lg-4 position-relative">
-                <div class="img-thumbnail h-100">
-                    <img class="project-pic" src="assets/images/web9.jpeg" class="float-xl-right" alt="web develope">
-                </div>
-                <div class="project-name position-absolute text-center">
-                        <a href="  https://dima-04.github.io/Train-Scheduler/">Visit Train Scheduler!</a>
-                        <a href=" https://github.com/dima-04/Train-Scheduler">Train Scheduler repository</a>
+                    <a class="text" href="  https://dima-04.github.io/Train-Scheduler/">Visit Train Scheduler!</a>
+                    <br>
+                    <a class="text" href=" https://github.com/dima-04/Train-Scheduler">Train Scheduler repository</a>
                 </div>
             </div>
-            <div class="col-lg-4 position-relative">
+            <div class="col-lg-4 position-relative mt-3">
                 <div class="img-thumbnail h-100">
-                    <img class="project-pic" src="assets/images/web2.jpeg" class="float-xl-right" alt="web develope">
+                    <img class="project-pic" src="assets/images/What-cooking.png" class="float-xl-right"
+                        alt="web develope">
                 </div>
-                <div class="project-name position-absolute text-center">Love Game</div>
+                <div class="project-name position-absolute text-center mb-2 ">
+                    <a class="text" href="  https://jsills3110.github.io/Project-1/">What's cooking</a>
+                    <br>
+                    <a class="text" href=" https://github.com/jsills3110/Project-1">What's cooking repository</a>
+                </div>
             </div>
-            <div class="col-lg-4 position-relative">
+            <div class="col-lg-4 position-relative mt-3">
                 <div class="img-thumbnail h-100">
-                    <img class="project-pic" src="assets/images/download.png" class="float-xl-right" alt="web develope">
+                    <img class="project-pic" src="assets/images/Animal.png" class="float-xl-right" alt="web develope">
                 </div>
                 <div class="project-name position-absolute text-center">Html/CSS</div>
             </div>
