--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-      <a class="navbar-brand text-center" href="portfolio.html">Dima Dibb</a>
+      <a class="navbar-brand text-center" href="index.html">Dima Dibb</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
