--- a/portfolio.html
+++ b/portfolio.html
@@ -45,11 +45,10 @@
 
         </div>
         <div class="project-name position-absolute text-center">
-            
-          <a class="text" href="https://dima-04.github.io/Word-Guess-Game/">
-            <button type="button" class="btn btn-info">Demo</button>
-          </a>
-          <a class="text" href="https://github.com/dima-04/Word-Guess-Game"><button type="button" class="btn btn-info">GitHab</button>
+          <a class="text" href="https://github.com/dima-04/Word-Guess-Game"><button type="button" class="btn btn-info">Github</button>
+            </a>
+            <a class="text" href="https://dima-04.github.io/Word-Guess-Game/">
+              <button type="button" class="btn btn-info">Demo</button>
             </a>
         </div>
 
@@ -59,8 +58,8 @@
           <img class="project-pic" src="assets/images/Animal.png" class="float-xl-right" alt="web develope">
         </div>
         <div class="project-name position-absolute text-center">
-          <a class="text" href=" https://dima-04.github.io/GifTastic/"><button type="button" class="btn btn-info">GitHab</button></a>
-          <a class="text" href=" https://github.com/dima-04/GifTastic"><button type="button" class="btn btn-info">Demo</button></a>
+          <a class="text" href=" https://github.com/dima-04/GifTastic"><button type="button" class="btn btn-info">Github</button></a>
+          <a class="text" href=" https://dima-04.github.io/GifTastic/"><button type="button" class="btn btn-info">Demo</button></a>
         </div>
 
       </div>
@@ -69,8 +68,8 @@
           <img class="project-pic" src="assets/images/Anytime-T.png" class="float-xl-right" alt="web develope">
         </div>
         <div class="project-name position-absolute text-center">
-          <a class="text" href="  https://dima-04.github.io/Train-Scheduler/"><button type="button" class="btn btn-info">GitHab</button></a>
-          <a class="text" href=" https://github.com/dima-04/Train-Scheduler"><button type="button" class="btn btn-info">Demo</button></a>
+          <a class="text" href=" https://github.com/dima-04/Train-Scheduler"><button type="button" class="btn btn-info">Github</button></a>
+          <a class="text" href="  https://dima-04.github.io/Train-Scheduler/"><button type="button" class="btn btn-info">Demo</button></a>
         </div>
       </div>
       <div class="col-lg-4 position-relative mt-3">
@@ -78,8 +77,8 @@
           <img class="project-pic" src="assets/images/What-cooking.png" class="float-xl-right" alt="web develope">
         </div>
         <div class="project-name position-absolute text-center mb-2 ">
-          <a class="text" href="  https://jsills3110.github.io/Project-1/"><button type="button" class="btn btn-info">GitHab</button></a>
-          <a class="text" href=" https://github.com/jsills3110/Project-1"><button type="button" class="btn btn-info">Demo</button></a>
+          <a class="text" href=" https://github.com/jsills3110/Project-1"><button type="button" class="btn btn-info">Github</button></a>
+          <a class="text" href="  https://jsills3110.github.io/Project-1/"><button type="button" class="btn btn-info">Demo</button></a>
         </div>
       </div>
       <div class="col-lg-4 position-relative mt-3">
@@ -87,8 +86,8 @@
           <img class="project-pic" src="assets/images/shopazon.png" class="float-xl-right" alt="web develope">
         </div>
         <div class="project-name position-absolute text-center mb-2 ">
-          <a class="text" href=" https://evening-mesa-27220.herokuapp.com/"><button type="button" class="btn btn-info">GitHab</button></a>
-          <a class="text" href=" https://github.com/jazznerd206/Project-Two"><button type="button" class="btn btn-info">Demo</button></a>
+            <a class="text" href=" https://github.com/jazznerd206/Project-Two"><button type="button" class="btn btn-info">Github</button></a>
+          <a class="text" href=" https://evening-mesa-27220.herokuapp.com/"><button type="button" class="btn btn-info">Demo</button></a>
         </div>
       </div>
       <div class="col-lg-4 position-relative mt-3">
@@ -96,7 +95,7 @@
             <img class="project-pic" src="assets/images/friends.png" class="float-xl-right" alt="web develope">
           </div>
           <div class="project-name position-absolute text-center mb-2 ">
-            <a class="text" href=" https://github.com/dima-04/FriendFinder"><button type="button" class="btn btn-info">GitHab</button></a>
+            <a class="text" href=" https://github.com/dima-04/FriendFinder"><button type="button" class="btn btn-info">Github</button></a>
             <a class="text" href=" https://immense-cliffs-01952.herokuapp.com/"><button type="button" class="btn btn-info">Demo</button></a>
           </div>
         </div>
@@ -105,7 +104,7 @@
               <img class="project-pic" src="assets/images/burger.png" class="float-xl-right" alt="web develope">
             </div>
             <div class="project-name position-absolute text-center mb-2 ">
-              <a class="text" href="  https://github.com/dima-04/burger"><button type="button" class="btn btn-info">GitHab</button></a>
+              <a class="text" href="  https://github.com/dima-04/burger"><button type="button" class="btn btn-info">Github</button></a>
               <a class="text" href="  https://agile-sierra-55240.herokuapp.com/"><button type="button" class="btn btn-info">Demo</button></a>
             </div>
           </div>
