Update brand statement

--- a/index.html
+++ b/index.html
@@ -45,15 +45,7 @@
         <p ><a href="https://github.com/dima-04">Visit My GitHub Profile</a></p>
       </div>
       <div class="col-lg-7 text-justify">
-        <p class="paragraph-text mt-3">My Name is Dima, front-End Web Developer leveraging a background in journalism
-          and medical field, to build a more intuitive user experience on the web. Recently earned a certificate in Full
-          Stack Development from the University of Washington, with newly developed skills in JavaScript, CSS, React.js,
-          and responsive web design. I am known as an innovative problem-solver passionate about developing apps, with a
-          focus on mobile-first design and development. With each project, my aim is to best engage my audience for an
-          impactful user experience. I applied aspects of UX and agile development in a recent project where I worked in
-          a team of four to develop a single-page MERN app that helps local business owners track their sales, inventory
-          and attendance at specialty events. Excited to leverage skills in the future as part of a fast-paced,
-          quality-driven team in order to build better experiences on the web.
+        <p class="paragraph-text mt-3">My Name is Dima, A UW bootcamp graduate. I'm a Front-End Web Developer leveraging a background in journalism and medical field, to build a more intuitive user experiences on the web. An innovative problem-solver passionate about developing apps, with a focus on mobile-first design and development. Excited to leverage my skills as a team player in order to build better experiences on the web.
         </p>
         
       </div>
