--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p ><a href="https://github.com/dima-04">Visit My GitHub Profile</a></p>
       </div>
       <div class="col-lg-7 text-justify">
-        <p class="paragraph-text mt-3">My Name is Dima, A UW bootcamp graduate. I'm a Front-End Web Developer leveraging a background in journalism and medical field, to build a more intuitive user experiences on the web. An innovative problem-solver passionate about developing apps, with a focus on mobile-first design and development. Excited to leverage my skills as a team player in order to build better experiences on the web.
+        <p class="paragraph-text mt-3">My Name is Dima, A University of Washington bootcamp graduate. I'm a Front-End Web Developer leveraging a background in journalism and medical field, to build a more intuitive user experiences on the web. An innovative problem-solver passionate about developing apps, with a focus on mobile-first design and development. Excited to leverage my skills as a team player in order to build better experiences on the web.
         </p>
         
       </div>
